--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@types/node": "^20",
